--- a/HTML/todo.html
+++ b/HTML/todo.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>To-Do List</h1>
-        <button onclick="logout()">Déconnexion</button>
+        <button id="deco">Déconnexion</button>
         <input type="text" id="taskInput" placeholder="Ajouter une tâche...">
         <button  id="addTask">Ajouter</button>
         <ul id="taskList"></ul>
