--- a/index.html
+++ b/index.html
@@ -7,12 +7,30 @@
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="bannier">
+        <div class="navbar">
+            <h1 class="logo">MK_ToDoList</h1>
+        </div>
+    </div>
+    <div class="contenu">
+        <h1>To-Do List</h1>
+        <p> 
+            MK_ToDoList est une application de gestion de tâches simple et conviviale qui vous permet d'organiser votre journée de manière efficace. 
+            <br>Créez un compte pour accéder à votre propre liste de tâches personnalisée. Que ce soit pour le travail, les études ou les tâches quotidiennes,
+            <br>MK_ToDoList vous offre la possibilité de noter, suivre et marquer vos tâches comme terminées. Ne laissez rien de côté grâce à cette application pratique qui vous aide à rester organisé et productif. 
+            <br> Inscrivez-vous dès maintenant pour commencer à simplifier votre vie quotidienne avec MK_ToDoList !
+        </p>
+        <div>
+            <button type="button"><span></span><a href="./HTML/inscription.html" >Inscription</a></button>
+            <button type="button"><span></span><a href="./HTML/connexion.html" class="btn">Connexion</a></button>
+        </div>
+    </div>
+    <!-- <div class="container">
         <h1>Bienvenue sur notre site</h1>
         <a href="./HTML/inscription.html" class="btn">Inscription</a>
         <a href="./HTML/connexion.html" class="btn">Connexion</a>
     </div>
 
-    <script src="./JS/app.js"></script>
+    <script src="./JS/app.js"></script> -->
 </body>
 </html>
