modif autres ok

--- a/HTML/connexion.html
+++ b/HTML/connexion.html
@@ -18,7 +18,7 @@
             <br>
             <button class="btn" type="submit">Se connecter</button>
         </form>
-        <a href="../index.html" class="btn">Retour</a>
+        <a href="../index.html" class="btnRetour">Retour</a>
     </div>
 
     <script src="../JS/app2.js"></script>
