--- a/HTML/inscription.html
+++ b/HTML/inscription.html
@@ -18,7 +18,7 @@
             <br>
             <button class="btn" type="submit">S'inscrire</button>
         </form>
-        <a href="../index.html" class="btn">Retour</a>
+        <a href="../index.html" class="btnRetour">Retour</a>
     </div>
 
     <script src="../JS/app.js"></script>
