--- a/HTML/todo.html
+++ b/HTML/todo.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+        <div id="userDisplay">Utilisateur : [Nom d'utilisateur]</div>
         <h1>To-Do List</h1>
         <button id="deco">Déconnexion</button>
         <input type="text" id="taskInput" placeholder="Ajouter une tâche...">
