--- a/HTML/todo.html
+++ b/HTML/todo.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <div id="userDisplay">Utilisateur : [Nom d'utilisateur]</div>
-        <h1>To-Do List</h1>
+        <div id="userDisplay">Utilisateur : <span id="use">[Nom d'utilisateur]</span></div>
+        <h1>MK_ToDoList</h1>
         <button id="deco">Déconnexion</button>
         <input type="text" id="taskInput" placeholder="Ajouter une tâche...">
         <button  id="addTask">Ajouter</button>
