--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <div class="contenu">
         <h1>To-Do List</h1>
         <p> 
-            MK_ToDoList est une application de gestion de tâches simple et conviviale qui vous permet d'organiser votre journée de manière efficace. 
+            <span id="use">MK_ToDoList</span> est une application de gestion de tâches simple et conviviale qui vous permet d'organiser votre journée de manière efficace. 
             <br>Créez un compte pour accéder à votre propre liste de tâches personnalisée. Que ce soit pour le travail, les études ou les tâches quotidiennes,
-            <br>MK_ToDoList vous offre la possibilité de noter, suivre et marquer vos tâches comme terminées. Ne laissez rien de côté grâce à cette application pratique qui vous aide à rester organisé et productif. 
-            <br> Inscrivez-vous dès maintenant pour commencer à simplifier votre vie quotidienne avec MK_ToDoList !
+            <br><span id="use">MK_ToDoList</span> vous offre la possibilité de noter, suivre et marquer vos tâches comme terminées. Ne laissez rien de côté grâce à cette application pratique qui vous aide à rester organisé et productif. 
+            <br> Inscrivez-vous dès maintenant pour commencer à simplifier votre vie quotidienne avec <span id="use">MK_ToDoList</span> !
         </p>
         <div>
             <button type="button"><span></span><a href="./HTML/inscription.html" >Inscription</a></button>
